section design-it box middle overflow fix

--- a/assets/layout.css
+++ b/assets/layout.css
@@ -230,6 +230,7 @@ section.client-reviews .container {
 
 section.client-reviews .container * {
     margin-top: 1.5rem;
+    flex: 1 1 50%;
 }
 
 /*  design-it section   */
@@ -262,6 +263,8 @@ section.design-it .container-top {
     padding: 2.5rem;
     display: flex;
     flex-direction: column;
+    flex-wrap: nowrap;
+    overflow-x: scroll;
 }
 
 .design-it .box-big.middle * {
